--- a/package.json
+++ b/package.json
@@ -14,11 +14,22 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@textile/textile": "0.0.7",
-    "@textile/threads-client": "0.2.6",
+    "@textile/threads-database": "^0.1.0",
+    "@textile/threads-encoding": "^0.1.0",
+    "@textile/threads-network": "^0.1.0",
+    "@textile/threads-store": "^0.1.0",
+    "@types/datastore-core": "^0.7.0",
+    "@types/datastore-level": "^0.14.0",
+    "@types/interface-datastore": "^0.8.0",
     "@types/uuid": "^7.0.2",
     "apollo-server": "^2.11.0",
+    "buffer": "^5.5.0",
+    "datastore-core": "^1.0.0",
+    "datastore-level": "^0.14.1",
     "graphql": "^15.0.0",
+    "interface-datastore": "^0.8.3",
     "isomorphic-ws": "^4.0.1",
+    "streaming-iterables": "^4.1.2",
     "uuid": "^7.0.3",
     "ws": "^7.2.3"
   },
