Fixed dependencies. Need an alternative for npm

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@textile/textile": "0.0.7",
-    "@textile/threads-database": "^0.1.0",
-    "@textile/threads-encoding": "^0.1.0",
-    "@textile/threads-network": "^0.1.0",
-    "@textile/threads-store": "^0.1.0",
-    "@types/datastore-core": "^0.7.0",
-    "@types/datastore-level": "^0.14.0",
-    "@types/interface-datastore": "^0.8.0",
+    "@textile/threads-database": "0.1.0",
+    "@textile/threads-encoding": "0.1.0",
+    "@textile/threads-network": "0.1.0",
+    "@textile/threads-network-client": "^0.1.0",
+    "@textile/threads-store": "0.1.0",
+    "@types/datastore-core": "0.7.0",
+    "@types/datastore-level": "0.14.0",
+    "@types/interface-datastore": "0.8.0",
     "@types/uuid": "^7.0.2",
     "apollo-server": "^2.11.0",
     "buffer": "^5.5.0",
@@ -29,6 +30,7 @@
     "graphql": "^15.0.0",
     "interface-datastore": "^0.8.3",
     "isomorphic-ws": "^4.0.1",
+    "node-gyp-build": "4.2.0",
     "streaming-iterables": "^4.1.2",
     "uuid": "^7.0.3",
     "ws": "^7.2.3"
@@ -37,6 +39,7 @@
     "@types/webpack-env": "^1.15.1",
     "clean-webpack-plugin": "^3.0.0",
     "dotenv": "^8.2.0",
+    "keccak": "2.1.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
